<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.enlighten.conferencescheduler.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/add_task_controls_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/talk_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/talk_title_hint"
            android:lines="3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/sub_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1" >

            <EditText
                android:id="@+id/talk_duration"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:hint="@string/talk_duration_hint"
                android:inputType="number"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/duration_unit"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:entries="@array/units"
                android:prompt="@string/unit"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/add_talk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_talk" />
    </LinearLayout>

    <Button
        android:id="@+id/schedule_talks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/schedule_talk" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/schedule_talks"
        android:layout_below="@id/add_task_controls_container" >
    </ListView>

</RelativeLayout>